specs/blueprints/errors/parsing/unterminated_embed.eno
# An embed with an incomplete embed operator in the ending line

-- input
-- embed
value
value
value
- embed
-- input

## ParseError

-- text
The embed 'embed' starting in line 1 is not terminated until the end of the document.
-- text

-- snippet
   Line | Content
 >    1 | -- embed
 *    2 | value
 *    3 | value
 *    4 | value
 *    5 | - embed
-- snippet

selection: [0,0] => [0,8]

# An embed with an edge case key and missing space in the ending line

-- input
-- -
value
value
value
---
-- input

## ParseError

-- text
The embed '-' starting in line 1 is not terminated until the end of the document.
-- text

-- snippet
   Line | Content
 >    1 | -- -
 *    2 | value
 *    3 | value
 *    4 | value
 *    5 | ---
-- snippet

selection: [0,0] => [0,4]
